--- a/src/components/column.css
+++ b/src/components/column.css
@@ -19,3 +19,9 @@
     font-size: 1.5rem;
     color: #ffffff;
 }
+
+.extra-info {
+    margin: 10px 0;
+    font-size: 0.9rem;
+    color: #aaaaaa;
+  }  
