--- a/src/components/TaskItem.css
+++ b/src/components/TaskItem.css
@@ -35,3 +35,86 @@
 .card button:hover {
     background-color: #151618;
 }
+
+.task-form-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Fundo escurecido para foco no formulário */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .task-form {
+    background-color: #1e1e1e;
+    color: #ffffff;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 400px;
+  }
+  
+  .task-form h2 {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+  .task-form input,
+  .task-form textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #555;
+    border-radius: 8px;
+    background-color: #2a2a2a;
+    color: #ffffff;
+    margin-bottom: 15px;
+  }
+  
+  .task-form textarea {
+    resize: none; /* Impede o redimensionamento da caixa de texto */
+    height: 80px;
+  }
+  
+  .task-form button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  
+  .task-form button[type="submit"] {
+    background-color: #007BFF;
+    color: #ffffff;
+    margin-right: 10px;
+  }
+  
+  .task-form button[type="submit"]:hover {
+    background-color: #0056b3;
+  }
+  
+  .task-form button[type="button"] {
+    background-color: #555;
+    color: #ffffff;
+  }
+  
+  .task-form button[type="button"]:hover {
+    background-color: #333;
+  }
+  .priority-alta {
+    color: red;
+    font-weight: bold;
+  }
+  
+  .priority-média {
+    color: orange;
+  }
+  
+  .priority-baixa {
+    color: green;
+  }
+  
